--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,19 @@
+# Ignore node_modules folder
+node_modules/
+
+# Ignore .env file (for security)
 .env
+
+# Ignore dist or build folder (if used)
+dist/
+
+# Ignore logs
+*.log
+
+# Ignore OS files
+.DS_Store
+Thumbs.db
+
+# Ignore IDE/editor config files
+.vscode/
+.idea/
